--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ h1{
   justify-content: center;
   margin-top: 20px;
   margin-left: -5px;
+  
 }
 #clear{
     border:5px solid  rgb(247, 197, 151) ;
@@ -92,4 +93,21 @@ button:active{
 }
 .display{
     font-size: 14px;
+}
+@media screen and (max-width:600px) {
+    h1{
+        font-size: 30px;
+    }
+    .clear{
+        font-size: 14px;
+    }
+    .item{
+        grid-template-columns: 67px 265px;
+    }
+    #add, #submit{
+        width: 170px;
+    }
+    .container{
+        grid-template-columns: 115px 105px 100px;
+    }
 }
